--- a/Pipfile
+++ b/Pipfile
@@ -4,26 +4,26 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-python-dotenv = "*"
-djangorestframework = "*"
-django-countries = "*"
-django-phonenumber-field = "*"
-phonenumbers = "*"
-drf-spectacular = "*"
-pillow = "*"
-argon2-cffi = "*"
-djoser = "*"
-django-filter = "*"
-django-celery-email = "*"
-django-celery-beat = "*"
-cloudinary = "*"
-python-dateutil = "*"
-psycopg2-binary = "*"
+django = "==5.1.4"
+python-dotenv = "==1.0.1"
+djangorestframework = "==3.15.2"
+django-countries = "==7.6.1"
+django-phonenumber-field = "==8.0.0"
+phonenumbers = "==8.13.52"
+drf-spectacular = "==0.28.0"
+pillow = "==11.0.0"
+argon2-cffi = "==23.1.0"
+djoser = "==2.3.1"
+django-filter = "==24.3"
+django-celery-email = "==3.0.0"
+django-celery-beat = "==2.7.0"
+cloudinary = "==1.41.0"
+python-dateutil = "==2.9.0.post0"
+psycopg2-binary = "==2.9.10"
 
 [dev-packages]
-watchfiles = "*"
-black = "*"
+watchfiles = "==1.0.3"
+black = "==24.10.0"
 
 [requires]
 python_version = "3.12"
