--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ django-celery-beat = "==2.7.0"
 cloudinary = "==1.41.0"
 python-dateutil = "==2.9.0.post0"
 psycopg2-binary = "==2.9.10"
+loguru = "*"
 
 [dev-packages]
 watchfiles = "==1.0.3"
