feat: add custom user model and api documentation

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ djangorestframework = "==3.15.2"
 django-countries = "==7.6.1"
 django-phonenumber-field = "==8.0.0"
 phonenumbers = "==8.13.52"
-drf-spectacular = "==0.28.0"
 pillow = "==11.0.0"
 argon2-cffi = "==23.1.0"
 djoser = "==2.3.1"
@@ -21,6 +20,7 @@ cloudinary = "==1.41.0"
 python-dateutil = "==2.9.0.post0"
 psycopg2-binary = "==2.9.10"
 loguru = "*"
+drf-spectacular = "*"
 
 [dev-packages]
 watchfiles = "==1.0.3"
