--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,10 @@ python-dateutil = "==2.9.0.post0"
 psycopg2-binary = "==2.9.10"
 loguru = "*"
 drf-spectacular = "*"
+redis = "*"
+celery = "*"
+flower = "*"
+django-redis = "*"
 
 [dev-packages]
 watchfiles = "==1.0.3"
