--- a/.envs/.env.example
+++ b/.envs/.env.example
@@ -11,3 +11,6 @@ POSTGRES_DB=""
 POSTGRES_PASSWORD=""
 POSTGRES_USER=""
 BANK_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
+CLOUDINARY_CLOUD_NAME=""
